--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "versionChecker",
   "version": "1.0.0",
   "main": "index.js",
+  "scripts": {
+	"start": "node index.js"
+  },
   "license": "MIT",
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
